--- a/butterknife-sample/pom.xml
+++ b/butterknife-sample/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.jakewharton</groupId>
     <artifactId>butterknife-parent</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>butterknife-sample</artifactId>
