--- a/butterknife-sample/AndroidManifest.xml
+++ b/butterknife-sample/AndroidManifest.xml
@@ -19,5 +19,8 @@
         <category android:name="android.intent.category.DEFAULT"/>
       </intent-filter>
     </activity>
+    <activity
+        android:label="@string/app_name"
+        android:name=".HelloActivity"/>
   </application>
 </manifest>
