--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
             </sdk>
           </configuration>
         </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-invoker-plugin</artifactId>
+          <version>1.7</version>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
