--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.jakewharton</groupId>
   <artifactId>butterknife-parent</artifactId>
-  <version>1.3.0</version>
+  <version>1.3.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Butter Knife (Parent)</name>
@@ -39,7 +39,7 @@
     <url>http://github.com/JakeWharton/butterknife/</url>
     <connection>scm:git:git://github.com/JakeWharton/butterknife.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/JakeWharton/butterknife.git</developerConnection>
-    <tag>butterknife-parent-1.3.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
