--- a/butterknife/src/it/field-visibility/pom.xml
+++ b/butterknife/src/it/field-visibility/pom.xml
@@ -21,10 +21,30 @@
       <version>4.1.1.4</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>com.jakewharton</groupId>
       <artifactId>butterknife</artifactId>
       <version>@project.version@</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.robolectric</groupId>
+      <artifactId>robolectric</artifactId>
+      <version>2.0-alpha-2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup</groupId>
+      <artifactId>fest-android</artifactId>
+      <version>1.0.4</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
