--- a/butterknife/src/it/one-find-per-id/pom.xml
+++ b/butterknife/src/it/one-find-per-id/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>robolectric</artifactId>
-      <version>2.0-rc1</version>
+      <version>2.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
