--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <android.version>4.1.1.4</android.version>
     <android.platform>16</android.platform>
     <junit.version>4.10</junit.version>
-    <robolectric.version>2.0-rc1</robolectric.version>
+    <robolectric.version>2.1</robolectric.version>
     <fest.android.version>1.0.4</fest.android.version>
   </properties>
 
