Add @OnClick method injection.

--- a/butterknife/pom.xml
+++ b/butterknife/pom.xml
@@ -59,6 +59,7 @@
           <filterProperties>
             <project.version>${project.version}</project.version>
           </filterProperties>
+          <showErrors>true</showErrors>
         </configuration>
         <executions>
           <execution>
