--- a/butterknife/src/it/method-visibility/pom.xml
+++ b/butterknife/src/it/method-visibility/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example.butterknife.tests</groupId>
-  <artifactId>field-not-extending-view</artifactId>
+  <artifactId>method-visibility</artifactId>
   <version>HEAD-SNAPSHOT</version>
 
   <properties>
@@ -21,10 +21,30 @@
       <version>4.1.1.4</version>
       <scope>provided</scope>
     </dependency>
+
     <dependency>
       <groupId>com.jakewharton</groupId>
       <artifactId>butterknife</artifactId>
       <version>@project.version@</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.robolectric</groupId>
+      <artifactId>robolectric</artifactId>
+      <version>2.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup</groupId>
+      <artifactId>fest-android</artifactId>
+      <version>1.0.4</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
