Update Travis CI build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: java
 
+jdk: oraclejdk7
+
+before_install:
+  - export TERM=dumb
+  - sudo apt-get install -qq libstdc++6:i386 lib32z1
+  - export COMPONENTS=build-tools-19.0.1,android-16,extra-android-m2repository
+  - curl -L https://raw.github.com/embarkmobile/android-sdk-installer/version-1/android-sdk-installer | bash /dev/stdin --install=$COMPONENTS
+  - source ~/.android-sdk-installer/env
+
 notifications:
   email: false
