--- a/butterknife-sample/AndroidManifest.xml
+++ b/butterknife-sample/AndroidManifest.xml
@@ -13,7 +13,8 @@
 
     <activity
         android:label="@string/app_name"
-        android:name=".SimpleActivity">
+        android:name=".SimpleActivity"
+        android:windowSoftInputMode="stateHidden">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
         <category android:name="android.intent.category.LAUNCHER"/>
