--- a/butterknife/pom.xml
+++ b/butterknife/pom.xml
@@ -24,6 +24,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.squareup</groupId>
+      <artifactId>fest-android</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.robolectric</groupId>
       <artifactId>robolectric</artifactId>
       <scope>test</scope>
