--- a/pom.xml
+++ b/pom.xml
@@ -148,8 +148,8 @@
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-invoker-plugin</artifactId>
-          <version>1.7</version>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.9</version>
         </plugin>
       </plugins>
     </pluginManagement>
