--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>2.9</version>
+          <configuration>
+            <additionalparam>-Xdoclint:none</additionalparam>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
