Add some validation to elements before attempting to process them, in order to avoid falling prey to upstream compilation problems causing thrown exceptions rather than reported errors.

--- a/butterknife/pom.xml
+++ b/butterknife/pom.xml
@@ -14,6 +14,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.google.auto</groupId>
+      <artifactId>auto-common</artifactId>
+      <version>0.3</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
