Split the compiler and runtime into separate artifacts.

--- a/butterknife-sample/pom.xml
+++ b/butterknife-sample/pom.xml
@@ -19,6 +19,11 @@
       <artifactId>butterknife</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.jakewharton</groupId>
+      <artifactId>butterknife-compiler</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
