Split compiler from runtime library

--- a/butterknife-compiler/pom.xml
+++ b/butterknife-compiler/pom.xml
@@ -14,6 +14,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.jakewharton</groupId>
+      <artifactId>butterknife</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
