Fix #323 pr comments

--- a/butterknife/pom.xml
+++ b/butterknife/pom.xml
@@ -45,15 +45,9 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
+          <excludePackageNames>butterknife.internal:butterknife.internal.*</excludePackageNames>
         </configuration>
       </plugin>
     </plugins>
