--- a/butterknife-sample/src/main/AndroidManifest.xml
+++ b/butterknife-sample/src/main/AndroidManifest.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    android:versionCode="1"
-    android:versionName="1.0"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.butterknife">
 
-  <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="17"/>
-
   <application
+      android:allowBackup="false"
       android:label="@string/app_name"
-      android:name=".SimpleApp">
+      android:name=".SimpleApp"
+      tools:ignore="MissingApplicationIcon">
 
     <activity
         android:label="@string/app_name"
