Package ProGuard rules into the aar

--- a/butterknife-sample/build.gradle
+++ b/butterknife-sample/build.gradle
@@ -17,6 +17,12 @@ android {
     versionCode 1
     versionName '1.0.0'
   }
+
+  buildTypes {
+    debug {
+      minifyEnabled true
+    }
+  }
 }
 
 dependencies {
