Add tint support for @BindDrawable.

--- a/butterknife/build.gradle
+++ b/butterknife/build.gradle
@@ -17,6 +17,7 @@ android {
 
 dependencies {
   compile project(':butterknife-annotations')
+  provided deps.supportv4
 
   testCompile deps.festandroid
   testCompile deps.festassert
