--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,8 @@ ext {
 ext.deps = [
     // Android
     android: 'com.google.android:android:4.1.1.4',
-    
+    supportv4: 'com.android.support:support-v4:23.0.1',
+
     // Square
     javapoet: 'com.squareup:javapoet:1.2.0',
 
