--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ android:
   components:
     - build-tools-23.0.1
     - android-23
+    - extra-android-support
   licenses:
     - android-sdk-license-5be876d5
 
