Add support annotations to bind/listener annotations.
...with a gross hack!

--- a/butterknife-compiler/build.gradle
+++ b/butterknife-compiler/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'checkstyle'
 
+def logger = new com.android.build.gradle.internal.LoggerWrapper(project.logger)
+def sdkHandler = new com.android.build.gradle.internal.SdkHandler(project, logger)
+for (File file : sdkHandler.sdkLoader.repositories) {
+  repositories.maven {
+    url = file.toURI()
+  }
+}
+
 dependencies {
   compile project(':butterknife-annotations')
   compile deps.autoservice
