--- a/butterknife-annotations/build.gradle
+++ b/butterknife-annotations/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'java'
 apply plugin: 'checkstyle'
 
+def logger = new com.android.build.gradle.internal.LoggerWrapper(project.logger)
+def sdkHandler = new com.android.build.gradle.internal.SdkHandler(project, logger)
+for (File file : sdkHandler.sdkLoader.repositories) {
+  repositories.maven {
+    url = file.toURI()
+  }
+}
+
 targetCompatibility = JavaVersion.VERSION_1_7
 sourceCompatibility = JavaVersion.VERSION_1_7
 
@@ -16,4 +24,5 @@ configurations {
 
 dependencies {
   provided deps.android
+  compile 'com.android.support:support-annotations:23.0.1'
 }
