Annotation invasion for making constraints explicit.

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ ext.deps = [
     // Android
     android: 'com.google.android:android:4.1.1.4',
     supportv4: 'com.android.support:support-v4:23.0.1',
+    supportAnnotations: 'com.android.support:support-annotations:23.0.1',
 
     // Square
     javapoet: 'com.squareup:javapoet:1.2.0',
