--- a/butterknife-annotations/build.gradle
+++ b/butterknife-annotations/build.gradle
@@ -24,5 +24,5 @@ configurations {
 
 dependencies {
   provided deps.android
-  compile 'com.android.support:support-annotations:23.0.1'
+  compile deps.supportAnnotations
 }
