--- a/butterknife/build.gradle
+++ b/butterknife/build.gradle
@@ -17,6 +17,7 @@ android {
 
 dependencies {
   compile project(':butterknife-annotations')
+  compile deps.supportAnnotations
   provided deps.supportv4
 
   testCompile deps.junit
