Deploy annotations module.

--- a/butterknife-annotations/build.gradle
+++ b/butterknife-annotations/build.gradle
@@ -26,3 +26,5 @@ dependencies {
   provided deps.android
   compile deps.supportAnnotations
 }
+
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
