Proper/optimized unbinder inheritance and new bind() API
## Structure

This is two parts folded into one:
- Unbinder inheritance is now fully functional and optimized
  - By optimized, I mean that generated classes won't generate unnecessary extra methods or unbinder classes unless absolutely necessary, avoiding a lot of generated cruft. Rules around this include:
    - If top level, no viewbindings, just return a singleton NOP with no generated unbinder extras
    - If top leve, has viewbindings, then it generates unbinder extras and returns the real implementation
    - In an inheritance tree, unbinder classes and creators are only generated at the first descendant to need it
    - Future descendants will extend from the highest available unbinder for the createUnbinder parametrization, while extending the most recent unbinder class for its Unbinder parent.
    - viewbinding-less intermediary classes won't generate unbinder classes or createUnbinder() methods
  - This works by analyzing the tree in the processor. After we find all the top-level classes, we recursively set up the required info in all their descendants to allow BinderClass to generate the appropriate code depending on the unbinder situation in the parent(s) it extends.
  - There's a pretty extensive set of test classes in the unbinder package that should cover all the edge cases. Planning to add one more for viewbindings in the base class, though I've manually confirmed this works properly as well.
- All the bind() methods now return the corresponding ViewUnbinder, rather than injecting the ViewBinder on a separate field.

## Remaining work

- Updating existing tests for the new API and generated code structure. This is just tedium, and I wanted to get this up for code/API review before going through all of it.
- ViewUnbinder or go back to Unbinder?
- `@CheckResult` on bind() calls or no?
- You tell me?

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ ext.deps = [
     // Square
     javapoet: 'com.squareup:javapoet:1.4.0',
 
+    // Other
+    rxjava: 'io.reactivex:rxjava:1.1.2',
+
     // Test dependencies
     junit: 'junit:junit:4.12',
     truth: 'com.google.truth:truth:0.27',
