--- a/butterknife-compiler/build.gradle
+++ b/butterknife-compiler/build.gradle
@@ -14,6 +14,7 @@ dependencies {
   compile deps.autoservice
   compile deps.autocommon
   compile deps.javapoet
+  compile deps.rxjava
 
   testCompile deps.junit
   testCompile deps.truth
