--- a/butterknife-compiler/build.gradle
+++ b/butterknife-compiler/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'java'
 apply plugin: 'checkstyle'
 
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
+
 def logger = new com.android.build.gradle.internal.LoggerWrapper(project.logger)
 def sdkHandler = new com.android.build.gradle.internal.SdkHandler(project, logger)
 for (File file : sdkHandler.sdkLoader.repositories) {
