Update project dependencies
- Gradle plugin 1.5.0
  - Not sure if you'd be ok with the 2.0 rc
- Robolectric 3.0
- Truth 0.28
- Support 23.2.1
- JavaPoet 1.6.1
- compile-testing 0.9
- auto-common 0.6
- gradle 2.12 plus a wrapper task for easy updating in the future

--- a/butterknife-compiler/build.gradle
+++ b/butterknife-compiler/build.gradle
@@ -22,6 +22,7 @@ dependencies {
   testCompile deps.junit
   testCompile deps.truth
   testCompile deps.robolectric
+  testCompile deps.supportv4
   testCompile deps.compiletesting
   testCompile files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
 }
