--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ subprojects { project ->
       mavenCentral()
     }
     dependencies {
-      classpath 'com.android.tools.build:gradle:1.3.1'
+      classpath 'com.android.tools.build:gradle:1.5.0'
       classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
   }
@@ -47,20 +47,25 @@ ext {
 ext.deps = [
     // Android
     android: 'com.google.android:android:2.1.2',
-    supportv4: 'com.android.support:support-v4:23.0.1',
-    supportAnnotations: 'com.android.support:support-annotations:23.0.1',
+    supportv4: 'com.android.support:support-v4:23.2.1',
+    supportAnnotations: 'com.android.support:support-annotations:23.2.1',
 
     // Square
-    javapoet: 'com.squareup:javapoet:1.4.0',
+    javapoet: 'com.squareup:javapoet:1.6.1',
 
     // Other
     rxjava: 'io.reactivex:rxjava:1.1.2',
 
     // Test dependencies
     junit: 'junit:junit:4.12',
-    truth: 'com.google.truth:truth:0.27',
-    robolectric: 'org.robolectric:robolectric:2.2',
-    compiletesting: 'com.google.testing.compile:compile-testing:0.7',
+    truth: 'com.google.truth:truth:0.28',
+    robolectric: 'org.robolectric:robolectric:3.0',
+    compiletesting: 'com.google.testing.compile:compile-testing:0.9',
     autoservice: 'com.google.auto.service:auto-service:1.0-rc2',
-    autocommon: 'com.google.auto:auto-common:0.4'
+    autocommon: 'com.google.auto:auto-common:0.6'
 ]
+
+task wrapper(type: Wrapper) {
+  gradleVersion = '2.12'
+  distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
+}
