Print lint to stdout
Ok CI what are you seeing

--- a/butterknife-sample/build.gradle
+++ b/butterknife-sample/build.gradle
@@ -23,6 +23,11 @@ android {
       minifyEnabled true
     }
   }
+
+  lintOptions {
+    textReport true
+    textOutput 'stdout'
+  }
 }
 
 dependencies {
