Correct lint options

--- a/butterknife/build.gradle
+++ b/butterknife/build.gradle
@@ -9,6 +9,11 @@ android {
 
     consumerProguardFiles 'proguard-rules.txt'
   }
+
+  lintOptions {
+    textReport true
+    textOutput 'stdout'
+  }
 }
 
 dependencies {
