Tweak travis to install tools and platform-tools

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ android:
   components:
     - build-tools-23.0.1
     - android-23
+    - tools
+    - platform-tools
     - extra-android-m2repository
   licenses:
     - android-sdk-license-5be876d5
