Update ProGuard (again) and actually test it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,18 @@ android:
     - build-tools-23.0.3
     - android-23
     - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-18
 
 jdk:
   - oraclejdk8
+
+
+before_script:
+  # Create and start an emulator for instrumentation tests.
+  - echo no | android create avd --force -n test -t android-18 --abi armeabi-v7a
+  - emulator -avd test -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82
 
 after_success:
   - .buildscript/deploy_snapshot.sh
