--- a/butterknife-annotations/build.gradle
+++ b/butterknife-annotations/build.gradle
@@ -17,13 +17,8 @@ checkstyle {
   showViolations true
 }
 
-configurations {
-  provided
-  compile.extendsFrom provided
-}
-
 dependencies {
-  provided deps.android
+  compileOnly deps.android
   compile deps.supportAnnotations
 }
 
