--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,10 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82
 
+script:
+  - ./gradlew butterknife-gradle-plugin:install -Dorg.gradle.configureondemand=true &&
+    ./gradlew build connectedCheck
+
 after_success:
   - .buildscript/deploy_snapshot.sh
 
