--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
 include ':butterknife'
 include ':butterknife-annotations'
 include ':butterknife-compiler'
+include ':butterknife-gradle-plugin'
+include ':butterknife-lint'
 include ':butterknife-sample'
+include ':butterknife-sample-lib'
 
 rootProject.name = 'butterknife-parent'
