Change plugin name to be qualified.

--- a/butterknife-sample-lib/build.gradle
+++ b/butterknife-sample-lib/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
 apply plugin: 'com.android.library'
 apply plugin: 'com.neenbedankt.android-apt'
-apply plugin: 'butterknife'
+apply plugin: 'com.jakewharton.butterknife'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
