--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include ':butterknife-annotations'
 include ':butterknife-compiler'
 include ':butterknife-gradle-plugin'
 include ':butterknife-lint'
-include ':butterknife-sample'
-include ':butterknife-sample-lib'
+//include ':butterknife-sample'
+//include ':butterknife-sample-lib'
 
 rootProject.name = 'butterknife-parent'
