--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,8 @@ include ':butterknife-annotations'
 include ':butterknife-compiler'
 include ':butterknife-gradle-plugin'
 include ':butterknife-lint'
-//include ':butterknife-sample'
-//include ':butterknife-sample-lib'
+
+include ':sample:app'
+include ':sample:library'
 
 rootProject.name = 'butterknife-parent'
