Remove the need for the binder class.

--- a/butterknife-integration-test/build.gradle
+++ b/butterknife-integration-test/build.gradle
@@ -28,8 +28,9 @@ android {
   }
 
   buildTypes {
-    debug {
+    release {
       minifyEnabled true
+      proguardFile getDefaultProguardFile('proguard-android.txt')
     }
   }
 }
