update to robolectric 3.1.2

--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,8 @@ ext.deps = [
     // Test dependencies
     junit: 'junit:junit:4.12',
     truth: 'com.google.truth:truth:0.28',
-    robolectric: 'org.robolectric:robolectric:3.1',
+    robolectric: 'org.robolectric:robolectric:3.1.2',
+    openglApi: 'org.khronos:opengl-api:gl1.1-android-2.1_r1',
     compiletesting: 'com.google.testing.compile:compile-testing:0.9',
     autoservice: 'com.google.auto.service:auto-service:1.0-rc2',
     autocommon: 'com.google.auto:auto-common:0.6'
