--- a/build.gradle
+++ b/build.gradle
@@ -51,12 +51,13 @@ ext {
 }
 
 def androidToolsVersion = '25.1.2'
+def supportLibraryVersion = '24.2.0'
 
 ext.deps = [
     // Android
     android: 'com.google.android:android:4.1.1.4',
-    supportv4: 'com.android.support:support-v4:24.1.0',
-    supportAnnotations: 'com.android.support:support-annotations:24.1.0',
+    supportv4: "com.android.support:support-v4:$supportLibraryVersion",
+    supportAnnotations: "com.android.support:support-annotations:$supportLibraryVersion",
     androidGradle: 'com.android.tools.build:gradle:2.1.3',
     lint: "com.android.tools.lint:lint:$androidToolsVersion",
     lintApi: "com.android.tools.lint:lint-api:$androidToolsVersion",
