--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ def supportLibraryVersion = '24.2.0'
 ext.deps = [
     // Android
     android: 'com.google.android:android:4.1.1.4',
-    supportv4: "com.android.support:support-v4:$supportLibraryVersion",
+    supportv4: "com.android.support:support-compat:$supportLibraryVersion",
     supportAnnotations: "com.android.support:support-annotations:$supportLibraryVersion",
     androidGradle: 'com.android.tools.build:gradle:2.1.3',
     lint: "com.android.tools.lint:lint:$androidToolsVersion",
