--- a/build.gradle
+++ b/build.gradle
@@ -59,13 +59,12 @@ ext.deps = [
     android: 'com.google.android:android:4.1.1.4',
     supportCompat: "com.android.support:support-compat:$supportLibraryVersion",
     supportAnnotations: "com.android.support:support-annotations:$supportLibraryVersion",
+    supportTestRunner: 'com.android.support.test:runner:0.5',
     androidGradle: 'com.android.tools.build:gradle:2.1.3',
     lint: "com.android.tools.lint:lint:$androidToolsVersion",
     lintApi: "com.android.tools.lint:lint-api:$androidToolsVersion",
     lintChecks: "com.android.tools.lint:lint-checks:$androidToolsVersion",
     lintTests: "com.android.tools.lint:lint-tests:$androidToolsVersion",
-    butterknife: "com.jakewharton:butterknife:$butterknifeLatestReleaseVersion",
-    butterknifeCompiler: "com.jakewharton:butterknife-compiler:$butterknifeLatestReleaseVersion",
 
     // Square
     javapoet: 'com.squareup:javapoet:1.7.0',
@@ -80,5 +79,9 @@ ext.deps = [
     openglApi: 'org.khronos:opengl-api:gl1.1-android-2.1_r1',
     compiletesting: 'com.google.testing.compile:compile-testing:0.9',
     autoservice: 'com.google.auto.service:auto-service:1.0-rc2',
-    autocommon: 'com.google.auto:auto-common:0.6'
+    autocommon: 'com.google.auto:auto-common:0.6',
+
+
+    butterknife: "com.jakewharton:butterknife:$butterknifeLatestReleaseVersion",
+    butterknifeCompiler: "com.jakewharton:butterknife-compiler:$butterknifeLatestReleaseVersion"
 ]
