--- a/butterknife-integration-test/build.gradle
+++ b/butterknife-integration-test/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -37,7 +36,7 @@ android {
 
 dependencies {
   compile project(':butterknife')
-  apt project(':butterknife-compiler')
+  annotationProcessor project(':butterknife-compiler')
 
   testCompile deps.junit
   testCompile deps.truth
