--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -32,7 +31,7 @@ android {
 
 dependencies {
   compile deps.butterknife
-  apt deps.butterknifeCompiler
+  annotationProcessor deps.butterknifeCompiler
 
   compile project(':sample:library')
 
