--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ subprojects { project ->
   version = VERSION_NAME
 
   repositories {
-    mavenCentral()
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
   }
 
   if (!project.name.equals('butterknife-gradle-plugin')) {
@@ -28,7 +30,6 @@ subprojects { project ->
 
   buildscript {
     repositories {
-      mavenCentral()
       maven {
         url "https://plugins.gradle.org/m2/"
       }
