--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ subprojects { project ->
   version = VERSION_NAME
 
   repositories {
-    mavenCentral()
+    maven {
+      url "https://plugins.gradle.org/m2/"
+    }
   }
 
   if (!project.name.equals('butterknife-gradle-plugin')) {
@@ -28,14 +30,12 @@ subprojects { project ->
 
   buildscript {
     repositories {
-      mavenCentral()
       maven {
         url "https://plugins.gradle.org/m2/"
       }
     }
     dependencies {
-      classpath 'com.android.tools.build:gradle:2.1.3'
-      classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+      classpath 'com.android.tools.build:gradle:2.2.0'
       classpath 'gradle.plugin.com.kageiit:lintrules:1.1.2'
     }
   }
@@ -60,7 +60,7 @@ ext.deps = [
     supportCompat: "com.android.support:support-compat:$supportLibraryVersion",
     supportAnnotations: "com.android.support:support-annotations:$supportLibraryVersion",
     supportTestRunner: 'com.android.support.test:runner:0.5',
-    androidGradle: 'com.android.tools.build:gradle:2.1.3',
+    androidGradle: 'com.android.tools.build:gradle:2.2.0',
     lint: "com.android.tools.lint:lint:$androidToolsVersion",
     lintApi: "com.android.tools.lint:lint-api:$androidToolsVersion",
     lintChecks: "com.android.tools.lint:lint-checks:$androidToolsVersion",
@@ -80,7 +80,6 @@ ext.deps = [
     compiletesting: 'com.google.testing.compile:compile-testing:0.9',
     autoservice: 'com.google.auto.service:auto-service:1.0-rc2',
     autocommon: 'com.google.auto:auto-common:0.6',
-
 
     butterknife: "com.jakewharton:butterknife:$butterknifeLatestReleaseVersion",
     butterknifeCompiler: "com.jakewharton:butterknife-compiler:$butterknifeLatestReleaseVersion"
