--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ subprojects { project ->
       }
     }
     dependencies {
-      classpath 'com.android.tools.build:gradle:2.3.0-rc1'
+      classpath 'com.android.tools.build:gradle:2.2.2'
       classpath 'gradle.plugin.com.kageiit:lintrules:1.1.2'
     }
   }
